@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: play.c,v 1.57 2001/03/12 16:09:20 gtw Exp $
+ * $Id: play.c,v 1.58 2001/03/13 17:22:59 gtw Exp $
  */
 
 #include "config.h"
@@ -741,6 +741,7 @@ static int ComputerTurn( void ) {
       
   case PLAYER_HUMAN:
       /* fall through */
+      ;
   }
   
   assert( FALSE );
